    build system cmake+ninja).  Thanks to Kyle Edwards for the
    suggestion.  (Closes: #895044)
  * meson.pm: Rewrite as a generator build system with ninja as
    the only backend.
  * debhelper.7: Recommend packagers to use "debian/<pkg>.<file>"
    over "debian/<file>" in most cases.  Thanks to Johannes
    Schauer for the suggestion.

  [ Nicolas Boulenguez ]
  * dh_installxfonts: Fix typo that causes a misc:Depends on
    non-existing xfont-utils.  (Closes: #894835)
  * dh_installwm.1: Document --all.  (Closes: #895011)
  * dh_usrlocal: Fix bug where the generated prerm script generated
    by dh_usrlocal could remove a directory directly in /usr/local.
    (Closes: #894549)

  [ Mattia Rizzolo ]
  * Lower the version restrictions on dpkg and dpkg-dev.  They are not
    needed anymore, as R³ support is not implied anymore, but requires
    an environment variable to be passed.

 -- Niels Thykier <niels@thykier.net>  Wed, 04 Apr 2018 05:14:35 +0000

debhelper (11.1.6) unstable; urgency=medium

  * Dh_Lib: Avoid passing invalid parameters to a function, which
    caused tons of "package ARRAY(...) is not in control info"
    warnings from dh in some cases.  It triggers when dh thinks
    the package might have architecture qualified debhelper config
    files.  The warning is harmless (besides the noise) for all
    native builds and most cross builds, but it did invalidate
    attempt to make pkgfile() use "DEB_TARGET_ARCH{,_OS}"
    (see 11.1.5~alpha1).  Thanks to Andreas Beckmann for reporting
    the issue.  (Closes: #891546)
  * dh: Refactor handling of sequences to simplify some code paths.
  * autopkgtests: Remove "use-name" tests as it no longer works.
    The debhelper module makes assumptions in which directory it is
    run from and the test breaks these assumptions.
  * debian/control: Comment out versioned dependency on make.
    It is not strictly necessary for Debian and causes issues with