@@ -22,6 +22,8 @@ debhelper (11.2) UNRELEASED; urgency=medium
   * debhelper.7: Recommend packagers to use "debian/<pkg>.<file>"
     over "debian/<file>" in most cases.  Thanks to Johannes
     Schauer for the suggestion.
+  * dh_usrlocal: Implement a simple guard for directories that
+    will likely cause issues in the shell snippets.
 
   [ Nicolas Boulenguez ]
   * dh_installxfonts: Fix typo that causes a misc:Depends on
